# tinyworld

./: Cargo.toml  notes.md  test.tw
examples/: simple.rs
src/: approx_lru_k.rs  distance_calculators.rs  hnsw.rs  index.rs  lib.rs  metadata.rs  storage_manager.rs  tinyworld.rs  utils.rs  vector_pool.rs
tests/: scratch.rs
