[package]
name = "tinyworld"
version = "0.1.0"
edition = "2021"

[features]
simd = []

[dependencies]
arrow = "53.0.0"
csv = "1.3.0"
itertools = "0.13.0"
ordered-float = "4.3.0"
parquet = "53.0.0"
rand = "0.8.5"
rmp-serde = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sorted-vec = "0.8.3"
uuid = { version = "1.10.0", features = ["v4"] }
zerocopy = { version = "0.8.1", features = ["derive"] }

[dev-dependencies]
polars = { version = "0.43.1", features = ["lazy", "parquet", "cloud"] }
